--- a/zwei7-ytliu/index.html
+++ b/zwei7-ytliu/index.html
@@ -41,7 +41,7 @@
 
       <iframe style="width:720px; margin:10px; height:400px;"src="B1.html"></iframe>
       <p>
-        Or try another one online <a href="S1.html/">here</a>. 
+        Or try another one online <a href="S1.html">here</a>. 
       </p>
 
       <h2>Deliverables</h2>
