--- a/zwei7-ytliu/index.html
+++ b/zwei7-ytliu/index.html
@@ -22,7 +22,7 @@
 
       <h1 class="title">Presenting Data Chart Sequentially v.s. Unsequentially</h1>
       <div class="authors">
-        <a href="#">Nina (Zhuxiaona) Wei</a>,
+        <a href="http://zwei.im">Nina (Zhuxiaona) Wei</a>,
         <a href="#">Yen-Ting (Christine) Liu</a>
       </div>
 
